--- a/Css/home.css
+++ b/Css/home.css
@@ -5,6 +5,7 @@ html,body{
     margin: auto;
     background-color: rgb(255, 255, 255);
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 
@@ -677,7 +678,7 @@ html,body{
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    object-fit: scale-down;
+    object-fit: cover;
     object-position: center 30%;
 }
 /*END MENU*/
